Different font for waybar; fix icon spacing; add recording... to lualine; fix copyq with xwayland applications

--- a/dot_config/waybar/style.css
+++ b/dot_config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
     border: none;
     min-height: 0;
-    font-family: "Iosevka Nerd Font Propo";
+    font-family: "JetBrains";
     font-weight: 500;
     font-size: 14px;
     padding: 0;
